# lisp

./: Cargo.toml  README.md  build.rs  generate.sh  grammar.js
src/: main.rs
tree-sitter-lisp/: grammar.js
tree-sitter-lisp/src/: grammar.json  node-types.json  parser.c
