[package]
name = "lisp-treesitter"
version = "0.1.0"
authors = ["Cole Lawrence <cole@colelawrence.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.3.10"

[build-dependencies]
cc = "1.0.45"
